array.island.Island.scala.error
Erreur de compilation :
Island:7: error: not found: value lenght
  for (n <- 1 to (lenght(num)-1)) {
                  ^